Fixed background of post card image in dark mode

--- a/themes/gokarna-custom/assets/css/dark.css
+++ b/themes/gokarna-custom/assets/css/dark.css
@@ -111,3 +111,7 @@ video {
 .post-image-wrapper {
     background: var(--dark-secondary-color);
 }
+
+.post-card-image-wrapper {
+    background: var(--dark-secondary-color)
+}
