--- a/themes/gokarna-custom/assets/css/main.css
+++ b/themes/gokarna-custom/assets/css/main.css
@@ -719,7 +719,7 @@ table td {
     width: 100%;
     height: 100%;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 
@@ -764,7 +764,7 @@ table td {
 .post-card-image-wrapper img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
